tests/compile/semicolon/semicolon_syntax_warning.stderr
error: use of deprecated function `foo_bar`: compose_idents!: Using semicolons as separators is deprecated, use commas instead
  --> tests/compile/semicolon/semicolon_syntax_warning.rs:25:16
   |
25 |     assert_eq!(foo_bar(), 1);
   |                ^^^^^^^
   |
note: the lint level is defined here
  --> tests/compile/semicolon/semicolon_syntax_warning.rs:3:9
   |
3  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`

error: use of deprecated function `foo_baz`: compose_idents!: Using semicolons as separators is deprecated, use commas instead
  --> tests/compile/semicolon/semicolon_syntax_warning.rs:26:16
   |
26 |     assert_eq!(foo_baz(), 2);
   |                ^^^^^^^
